added some local storage and accessing page content

--- a/verification-plugins/chrome/yt-lizzenz0r/popup.html
+++ b/verification-plugins/chrome/yt-lizzenz0r/popup.html
@@ -10,6 +10,11 @@
       </style>
     </head>
     <body>
+
+      Checking the license for you...
+      <div id="anyLocalKey"></div>
+
       <button id="changeColor"></button>
+      <script src="popup.js"></script>
     </body>
   </html>
