added reference to web3

--- a/verification-plugins/chrome/yt-lizzenz0r/popup.html
+++ b/verification-plugins/chrome/yt-lizzenz0r/popup.html
@@ -8,13 +8,18 @@
           outline: none;
         }
       </style>
+
     </head>
     <body>
 
       Checking the license for you...
       <div id="anyLocalKey"></div>
-
-      <button id="changeColor"></button>
+      <button id="checkLicense">Check license</button>
+      <div id="videoUrl"></div>
+      <h1>Available Licenses</h1>
+      <ul id="licenseList">
+      </ul>
+      <script src="web3.min.js"></script>
       <script src="popup.js"></script>
     </body>
   </html>
