--- a/verification-plugins/chrome/yt-lizzenz0r/popup.html
+++ b/verification-plugins/chrome/yt-lizzenz0r/popup.html
@@ -8,18 +8,23 @@
           outline: none;
         }
       </style>
-
     </head>
     <body>
 
       Checking the license for you...
-      <div id="anyLocalKey"></div>
-      <button id="checkLicense">Check license</button>
-      <div id="videoUrl"></div>
-      <h1>Available Licenses</h1>
-      <ul id="licenseList">
-      </ul>
-      <script src="web3.min.js"></script>
+
+      <!--<div id="anyLocalKey"></div>-->
+
+      <!-- <div id="videoUrl"></div> -->
+
+      <h3 id="result"></h3>
+      <div id="licenseList"></div>
+
+      <script src="https://wallet.metamask.io/metamascara.js"></script>
       <script src="popup.js"></script>
+
+
+      <!--<button id="checkLicense">Check license</button>-->
+
     </body>
   </html>
